# Bugs

./: manage.py  pyproject.toml
authorization/: admin.py  urls.py  views.py
bugs/: asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
bugs/migrations/: 0001_initial.py
bugs/templates/: details.html  home.html  sorted.html  users.html
customuser/: models.py  urls.py  views.py
customuser/migrations/: 0001_initial.py
