[tool.poetry]
name = "bugs"
version = "0.1.0"
description = "App for creating tickets between users"
authors = ["Jake Hershey <joehersheu45@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ipdb = "^0.12.3"
django = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
